<resources>
    <string name="app_name">Lodge</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="AboutUsName" translatable="false">Ciro León Espinosa Avilés</string>
    <string name="AboutUsSubTiTle">Estudiante</string>
    <string name="AboutUsBrief" translatable="false">cironidas@gmail.com</string>
    <string name="AboutUsGithub" translatable="false">https://github.com/Cirglorfin</string>
    <string name="aboutus">Sobre nosotros...</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="crear">Crear</string>
    <string name="correo">Correo</string>
    <string name="recordar_contrase_a">Recordar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="userProfile">Usuario</string>
    <string name="enviar">Enviar</string>
    <string name="correo_electr_nico">"Correo "</string>
    <string name="recuperar_cuenta">Recuperar cuenta</string>
    <string name="introduce_tu_correo_electr_nico_para_cambiar_la_contrase_a">Introduce tu correo electrónico para cambiar la contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="usuario_o_correo_electr_nico">Usuario o correo</string>
    <string name="recordar">Recordar</string>
    <string name="olvid_la_contrase_a">¿Olvidó la contraseña?</string>
    <string name="entrar">Entrar</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta? </string>
    <string name="reg_strate">Regístrate</string>
    <string name="editar_grupo">Editar server</string>
    <string name="aplicar_cambios">Aplicar cambios</string>
    <string name="datos_separados_por_quot_quot">* Datos separados por \";\"</string>
    <string name="nombre_del_grupo">Nombre del server</string>
    <string name="administradores">Administradores</string>
    <string name="miembros">Miembros</string>
    <string name="descripci_n">Descripción</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="contacto">Contacto</string>
    <string name="nombre_para_el_contacto">Nombre para el contacto</string>
    <string name="editar">Editar</string>
    <string name="editar_contacto">Editar contacto</string>
    <string name="a_adir_grupo">Añadir server</string>
    <string name="crear_grupo">Crear server</string>
    <string name="a_adir">Añadir</string>
    <string name="a_adir_contacto">Añadir contacto</string>
    <string name="publico">Público</string>
    <string name="privado">Privado</string>




    <string name="Contactos">Contactos</string>
    <string name="id_del_grupo">Id del servidor</string>
    <string name="imagen">Imagen</string>
    <string name="nombre_corto">Nombre corto</string>
    <string name="title_delete_server">Eliminar servidor</string>
    <string name="message_delete_server">¿Quiere eliminar el server %1$s?</string>

    <string name="action_server_orderById">Ordenar por Id</string>
    <string name="undoD">\"Deshacer eliminar \"</string>



    <!-- Strings used for fragments for navigation -->



    <string name="FragmentLogin">Fragment LogIn</string>
    <string name="FragmentSplash">Fragment Splash</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="tvSingUp">Registro</string>
    <string name="fab">Botón OK</string>
    <string name="errNameEmpty">Nombre vacío</string>
    <string name="errShortNameEmpty">Nombre corto vacío</string>
    <string name="errShortNameFormat">Formato de nombre corto incorrecto</string>
    <string name="errDuplicate">error</string>
    <string name="title_delete_dependency">Eliminar dependencia</string>
    <string name="message_delete">¿Quiere eliminar el elemento %1$s?</string>
    <string name="undo">deshacer</string>
    <string name="action_dependency_orderById">Ordenar por Id</string>
    <string name="action_logout">Cerrar sesión</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_account">Cuenta</string>
    <string name="title_email">Email</string>
    <string name="key_email">email</string>
    <string name="key_password">password</string>
    <string name="title_password">Contraseña</string>
    <string name="key_account">account</string>
    <string name="summary_account">Bla</string>
    <string name="account_header">Información de la cuenta</string>
    <string name="help_header">Ayuda</string>
    <string name="help_center">Centro de ayuda</string>
    <string name="key_help_center">help_center</string>
    <string name="title_privacy_condition">Politicas de privacidad</string>
    <string name="key_privacy_condition">privacy_condition</string>
    <string name="key_ringtone">ringtone</string>
    <string name="tite_ringtone">tono de notificaciones</string>
    <string name="notification_header">Notificaciones</string>
    <string name="title_active_notification">Activar notificaciones</string>
    <string name="key_active_notification">active_notification</string>
    <string name="channel_name">channel_inventory</string>
    <string name="channel_description">Canal general para las notificaciones</string>
    <string name="notify_add_dependency_title">Añadir dependencia</string>
    <string name="notify_add_dependency_description">Se añadio una dependencia</string>
    <string name="settingsFragment">settings fragment</string>
    <string name="dependencyListFragment">dependency list fragment</string>
    <string name="sectionListFragment">section list fragment</string>
</resources>