<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:fragment="com.example.inventory.ui.prefs.AccountFragment"
        android:icon="@drawable/burger"
        android:key="@string/key_account"
        android:title="@string/title_account"
        android:summary="@string/summary_account"/>


<PreferenceCategory app:title="@string/notification_header">
    <SwitchPreferenceCompat app:title="@string/title_active_notification"
        android:key="@string/key_active_notification"
        android:defaultValue="true"/>
    <ListPreference
        android:key="@string/key_ringtone"
        android:title="@string/tite_ringtone"
        android:entries="@array/ringtone_entries"
        android:entryValues="@array/ringtone_values"/>
</PreferenceCategory>
    <PreferenceCategory app:title="@string/help_header">

<Preference android:title="@string/help_center"
    android:key="@string/key_help_center">
    <intent android:action="android.intent.action.VIEW"
        android:data="https://faq.whatsapp.com"/>
</Preference>
<Preference
    android:title="@string/title_privacy_condition"
    android:key="@string/key_privacy_condition"
    ><intent android:action="android.intent.action.VIEW"
    android:data="https://www.whatsapp.com/privacy"/></Preference>
    </PreferenceCategory>

</PreferenceScreen>